fix: missed class names

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <h1 class="title">SUPER DELICIOUS PIZZA</h1>
   </header>
 
-  <nav>
+  <nav class="navbar">
     <ul>
       <li>
         <a class="navbar-item">Home</a>
@@ -27,8 +27,7 @@
     </ul>
   </nav>
 
-  <main>
-
+  <main class="content">
     <div class="card">
       <div class="card-image">
         <img src="https://boomcdn.fra1.digitaloceanspaces.com/4e77b8aa9e8960f957fd9afdafc55251.png" />
